test/semantics/programs/invalid/func-args-mismatch-params.guav
# Shouldn't pass since function call arguments don't match function declaration parameters

# Let arr be some integer array of at least length 2 and x and y be integers
f(arr, x, y) {
    x /= y
    ret x / arr[1] + y
}

print(f("not an array", true, {}))
